// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: <Actions/> Actions should render children properly 1`] = `
<div
  className="Actions Actions--top"
>
  <div>
    fake child
  </div>
</div>
`;

exports[`component: <Actions/> Actions.Left should render children properly 1`] = `
<div
  className="Actions-left"
>
  <div>
    fake child
  </div>
</div>
`;

exports[`component: <Actions/> Actions.Right should render children properly 1`] = `
<div
  className="Actions-right"
>
  <div>
    fake child
  </div>
</div>
`;
